# Shinigami

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  main-win.py  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
Shinigami/: __main__.py  config.json  config.py  ipc.py  main.py
Shinigami/commands/: __init__.py  ai.py  help.py  ping.py  restart.py  set_lang.py  sticker.py  test.py  transcribe.py
Shinigami/locales/: __init__.py  en.yaml  id.yaml
Shinigami/utils/: __init__.py  message.py
