[tool.poetry]
name = "shinigami"
version = "0.0.1"
description = "WhatsApp Bot"
authors = ["MhankBarBar <mhankbarbar@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
neonize = "^0.0.3"
python-magic-bin = { version="^0.4.14", platform='windows'}
textual = "^0.47.1"
ptyprocess = "^0.7.0"
watchfiles = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
shinigami = "Shinigami.main:start"